Add native Android music player and APK build